--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			</div>
 		</section>
 
-		<!------ About start------>
+		<!------ Portfolio start------>
 		<section class="portfolio" id="portfolio">
 			<div class="heading">
 				<span>Portfolio</span>
